# realtek-zephyr-project

./: CMakeLists.txt  Kconfig  README.md  west.yml
applications/: README.md
applications/matter_common/: matter_ota.c
applications/ot-cli/: CMakeLists.txt  Kconfig  prj.conf  rtl8762gn_evb.overlay  rtl87x2g_evb.overlay
applications/ot-cli/src/: main.c
applications/pm_device_test/boards/: rtl8752htv_evb.conf  rtl8752htv_evb.overlay  rtl8762gn_evb.conf  rtl8762gn_evb.overlay
applications/pm_device_test/src/: main.c
images/RTL8752H/: flash map.ini
images/RTL8752H/DualBank/: flash map.ini  flash_map.h  mptoolconfig.json  mptoolconfig_bank0.json  mptoolconfig_bank1.json
images/RTL8752H/dual_bank/: configFile_2025.09.23.16-cb37be4c6e99e774aa3bef2bfdc9faef.yaml
include/: CMakeLists.txt
include/dfu/: app_msg.h  bt_types.h  dfu_application.h  dfu_common.h  dfu_main.h  dfu_service.h  log_adapter.h  ota_config.h  silent_ota.h
jlink-settings/Realtek/RTL8752H/: JLinkSettings.JLinkScript
jlink-settings/Realtek/RTL87X2G/: RTL87X2G_FLASH.FLM
jlink-settings/realtek/rtl8752h/: RTL8752H_SPI_FLASH.FLM
jlink-settings/realtek/rtl87x2g/: RTL87X2G.JLinkScript
samples/bluetooth/peripheral_ota/: CMakeLists.txt  prj.conf  readme-ota-dual-bank.rst  readme-ota-single-bank.rst  step-by-step-guide-ota-sample.rst
subsys/: CMakeLists.txt  Kconfig
subsys/dfu/: CMakeLists.txt  Kconfig  dfu_application.c  dfu_common.c  dfu_flash.c  dfu_main.c  dfu_service.c  dfu_task.c  ota_service.c  silent_ota.c
tool/: tool.py  west-commands.yml
zephyr/: module.yml
(+4 files in other folders)
